chore(build): upgrade project to Java 24
Closes #114