@@ -64,6 +64,5 @@ Acción: throw para activar `DefaultErrorHandler`.
 - Revisar logs de `kafka_retry_attempt` y `kafka_dlt_publish`.
 
 ### Error `UnsupportedClassVersionError` en tests
-- Verificar que Maven tests corren con preview habilitado:
-  - `maven-surefire-plugin` con `argLine=--enable-preview`
-  - `maven-failsafe-plugin` con `argLine=--enable-preview`
+- Verificar que Maven y CI usan un JDK compatible con el `java.version` declarado en el POM.
+- GitHub Actions debe instalar un JDK alineado con `java.version` para compilar y ejecutar tests con `maven.compiler.release`.
